fix compile error